# kde-thumbnailer-blender

./: CMakeLists.txt  blender-thumbnailer-kde.desktop  blender_thumbnailer.kdev4  blendercreator.cpp  blendercreator.h  blenderthumbnail.desktop  main.cpp  test.blend  test_z.blend
debian/: changelog  control  copyright  rules
